@@ -29,7 +29,7 @@ include_once($config['homedir'] . '/include/functions_tags.php');
  * This function avoid duplicated by comparing module names.
  * 
  * @param int Source agent module id.
- * @param int Detiny agent id.
+ * @param int Destiny agent id.
  * @param string Forced name to the new module.
  *
  * @return New agent module id on success. Existing module id if it already exists.
@@ -47,7 +47,8 @@ function modules_copy_agent_module_to_agent ($id_agent_module, $id_destiny_agent
 		
 	$modules = agents_get_modules ($id_destiny_agent, false,
 		array ('nombre' => $module['nombre'], 'disabled' => false));
-	
+
+	// These are the modules that exists in the target 
 	if (! empty ($modules))
 		return array_pop (array_keys ($modules));
 	
